<resources>
    <string name="app_name">Tinh Eywan</string>
    <string name="let_is_login">Let is login</string>
    <string name="done_have_an_account_register">Don\'t have an account? Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="let_register">Let\'s Register</string>
    <string name="done_have_an_account_log_in">Don\'t have an account? log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_message">we will send you the password reset link to your email
    </string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="search">Search Now</string>
    <string name="best_products">Best Products</string>
    <string name="best_deals">Best Deals</string>
    <string name="add_to_card">Add To Card</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="original">Original</string>
    <string name="nike">Nike</string>
<!--string-->
    <string name="g_settings">Settings</string>
    <string name="g_edit_personal_details">edit personal details</string>
    <string name="g_orders">Orders</string>
    <string name="g_all_orders">All Orders</string>
    <string name="g__track_order">Track Order</string>
    <string name="g_billing">Billing And Addresses </string>
    <string name="g_notifications">Notifications</string>
    <string name="g_language">Language</string>
    <string name="help">Help</string>
    <string name="g_logout">Logout</string>
    <string name="version">Version 1.0</string>
<!-- Cart-->
    <string name="value">value</string>
    <string name="many">1</string>
    <string name="my_cart">My Cart</string>
    <string name="total_price">Total</string>
    <string name="price_total">$140</string>
    <string name="check_out">Check Out</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="regional">Regional</string>
    <string name="otp">OTP</string>
    <string name="plus">plus</string>
    <string name="min">min</string>

<!-- best_deal_item-->
    <string name="g_see_product">See Product</string>

    <string name="g_add_to_cart">Add to cart</string>

<!--Delete alert-->
    <string name="g_delete_item">Delete Item</string>
    <string name="g_are_you_sure_you_want_to_delete_this_item_from_cart">
        Are you sure you want to delete this item from cart</string>
    <string name="g_no">No</string>
    <string name="g_yes">Yes</string>

    <string name="product_item">Product Item</string>
    <string name="g_best_products">Best Products</string>
    <string name="g_address">Address</string>
    <string name="phone">Phone</string>
    <string name="link">Link</string>
    <string name="save">Save</string>
    <string name="g_payment_methods">Payment Methods</string>
    <string name="payment_explanation">Payment explanation</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="g_place_order">Place order</string>
    <string name="g_select_address_error">Select address error</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="g_change_forgot_password">Change forgot password</string>
    <string name="help_text">Got a question? We\'re here to answer</string>
    <string name="g_english">English</string>
    <string name="g_khmer">Khmer</string>
    <string name="g_no_orders_to_show">No orders to show</string>
    <string name="g_categories">Categories</string>
    <string name="g_facebook">Facebook</string>
    <string name="g_google">Google</string>
</resources>