<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="85dp"
        android:src="@drawable/logo_tinh" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="35dp"
        android:text="@string/let_is_login"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="17dp"
        app:cardCornerRadius="7dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1EFEF"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="7dp">


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1EFEF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/t_register"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/done_have_an_account_register"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:paddingRight="10dp"
        android:text="@string/login" />


</LinearLayout>