<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_gravity="center"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/logo_tinh"/>
    <TextView
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/let_register"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <TextView
        android:layout_gravity="center"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:text="@string/done_have_an_account_log_in"
        android:textStyle="italic"
        android:textSize="15sp"/>


    <androidx.cardview.widget.CardView
        android:layout_marginLeft="40dp"
        app:cardCornerRadius="7dp"
        android:layout_marginTop="17dp"
        android:layout_width="300dp"
        android:layout_height="48dp">

        <EditText
            android:gravity="center"
            android:background="#F1EFEF"
            android:hint="@string/first_name"
            android:id="@+id/editTextTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginLeft="40dp"
        app:cardCornerRadius="7dp"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="48dp">


        <EditText
            android:id="@+id/editTextTextLastName "
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1EFEF"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:gravity="center" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginLeft="40dp"
        app:cardCornerRadius="7dp"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="48dp">


        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1EFEF"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginLeft="40dp"
        app:cardCornerRadius="7dp"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="48dp">


        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1EFEF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:gravity="center" />
    </androidx.cardview.widget.CardView>
    <Button

        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingRight="10dp"
        android:text="@string/register" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="36px"
            android:layout_width="420px"
            android:layout_height="200px"
            android:src="@drawable/facebook"/>

        <ImageView
            android:layout_marginRight="36px"
            android:layout_gravity="end"
            android:layout_width="420px"
            android:layout_height="200px"
            android:src="@drawable/google" />

    </androidx.cardview.widget.CardView>



</LinearLayout>