<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/logo_tinh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_lets_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:fontFamily="@font/poppins_thin"
            android:gravity="center"
            android:text="@string/let_is_login"
            android:textColor="@color/g_black"
            android:textSize="27dp"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/done_have_an_account_register"
            android:textColor="@color/g_hint"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_lets_login"
            app:layout_constraintTop_toBottomOf="@id/tv_lets_login" />

        <EditText
            android:id="@+id/ed_email_login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/btn_white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/email"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/tv_dont_have_an_account" />

        <EditText
            android:id="@+id/ed_password_login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/password"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/ed_email_login"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/g_hint"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ed_password_login"
            app:layout_constraintTop_toBottomOf="@+id/ed_password_login" />

        <Button
            android:id="@+id/btn_login_fragment"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/poppins_light"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

        <ImageView
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_facebook_login"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/btn_login_fragment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_facebook"
            app:layout_constraintStart_toStartOf="@id/btn_facebook"
            app:layout_constraintEnd_toEndOf="@id/btn_facebook"
            app:layout_constraintTop_toTopOf="@id/btn_facebook"
            app:layout_constraintBottom_toBottomOf="@id/btn_facebook"/>

        <ImageView
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_google_login"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/btn_login_fragment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_google"
            app:layout_constraintStart_toStartOf="@id/btn_google"
            app:layout_constraintEnd_toEndOf="@id/btn_google"
            app:layout_constraintTop_toTopOf="@id/btn_google"
            app:layout_constraintBottom_toBottomOf="@id/btn_google"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.89" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>