<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#FFFFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageCartProduct"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/nike"
            android:scaleType="centerCrop"
            android:src="@drawable/nike_shoes"
            app:layout_constraintBottom_toBottomOf="@id/line"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvProductCartName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/nike"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageCartProduct"
            app:layout_constraintTop_toTopOf="@+id/imageCartProduct" />

        <TextView
            android:id="@+id/tvProductCartPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/$20"
            android:textColor="#000000"
            android:textSize="12sp"

            app:layout_constraintStart_toStartOf="@id/tvProductCartName"
            app:layout_constraintTop_toBottomOf="@id/tvProductCartName"/>

        <ImageView
            android:id="@+id/imagePlus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/plus"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageMinus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/min"
            android:src="@drawable/ic_remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvProductQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/many"
            app:layout_constraintTop_toBottomOf="@id/imageMinus"
            app:layout_constraintEnd_toEndOf="@id/imageMinus"
            app:layout_constraintBottom_toTopOf="@id/imagePlus"
            app:layout_constraintStart_toStartOf="@id/imagePlus"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>