<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_address_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />


            <TextView
                android:id="@+id/tv_payment_methods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_thin"
                android:text="@string/g_address"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img_address_close"
                app:layout_constraintStart_toEndOf="@id/img_address_close"
                app:layout_constraintTop_toTopOf="@+id/img_address_close" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>


    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/g_icon_tint"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/toolbar_address" />

    <EditText
        android:id="@+id/ed_address_title"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/phone"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <EditText
        android:id="@+id/ed_full_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/link"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/ed_address_title" />


    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ed_full_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_full_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_full_name">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_white_background"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/g_delete_item"
            android:textAllCaps="false"
            android:textColor="@color/g_hint"
            android:textSize="18dp"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_new_address"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:visibility="visible" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>