<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProductImages"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPageProductImages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/imageClose"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_close"
                app:tint="@color/black"/>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/LinearTitlePrice"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@id/cardProductImages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/nike"/>
            <TextView
                android:id="@+id/tvProductPrice"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#808080"
                android:text="1500$"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvProductDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#808080"
            android:textSize="18sp"

            app:layout_constraintTop_toBottomOf="@id/LinearTitlePrice"
            app:layout_constraintStart_toStartOf="@id/LinearTitlePrice"
            android:text="@string/original"/>
        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#808080"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductDescription"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintStart_toStartOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/line">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvProductColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvColors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvProductSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/buttonAddToCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/add_to_card"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>